#38 - feat(msi): Add MSI installer track for Docker-WSL-Manager